osd: Sign in early SIGHUP signal

In the process of starting the osd process,if system just call the
logratote("killall -q -1 ceph-mon ceph-mgr ceph-mds ceph-osd ceph-fuse radosgw...")
it will cause osd'init failed to start,
in addition, osd init slower than before, will increase the chances of the error.
Other modules(mon\mds\mgr...) also have type problems, but the most serious osd problem,
I can then make other modules similar changes.

Fixes: http://tracker.ceph.com/issues/22746

Signed-off-by: huanwen ren <ren.huanwen@zte.com.cn>